fixed mobile styling issue -- page overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -897,8 +897,8 @@ body.dark-mode,.dark-mode .projects-header
 
 	#books,#photos
 	{
-		max-width:95%;
-		width:100%;
+		max-width:90%;
+		width:98%;
 		margin-bottom:20px
 	}
 
